# python-git-diff

./: README.md
.github/actions/diff/: action.yml  index.js  pyproject.toml
.github/actions/diff/src/: github_actions.py  main.py  pr_events.py  push_events.py  utils.py
.github/actions/diff/src/tests/: conftest.py  test_github_actions.py  test_main.py  test_pr_events.py  test_push_events.py  test_utils.py
.github/workflows/: git-diff-push.yml  git-diff.yml
